--- a/rosecityblues.com/index.html
+++ b/rosecityblues.com/index.html
@@ -7,10 +7,12 @@
     <script type="text/javascript" href="/js/scripts.js"></script>
   </head>
   <body>
-    <h1>Rose City Blues 2017</h1>
-    <h2>November 3-5</h2>
-    <img src="" alt="placeholder for main logo">
-    <h3>See you among the stars!</h3>
-    <h3><a href="https://dancerfly.com/pbj/rose-city-blues/order/shop/" alt="">Register Today on Dancerfly</a></h3>
+    <div class="">
+      <h1>Rose City Blues 2017</h1>
+      <h2>November 3-5</h2>
+      <img src="" alt="placeholder for main logo">
+      <h3>See you among the stars!</h3>
+      <h3><a href="https://dancerfly.com/pbj/rose-city-blues/order/shop/" alt="">Register Today on Dancerfly</a></h3>
+    </div>
   </body>
 </html>
