Placeholder page until art arrives

--- a/rosecityblues.com/index.html
+++ b/rosecityblues.com/index.html
@@ -3,16 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>RCB 2017</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <script type="text/javascript" href="/js/scripts.js"></script>
+    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Yesteryear' rel='stylesheet'>
+    <script type="text/javascript" href="./js/bootstrap.js"></script>
+    <script type="text/javascript" href="./js/jquery-3.2.1.js"></script>
+    <script type="text/javascript" href="./js/scripts.js"></script>
   </head>
   <body>
     <div class="">
-      <h1>Rose City Blues 2017</h1>
-      <h2>November 3-5</h2>
-      <img src="" alt="placeholder for main logo">
-      <h3>See you among the stars!</h3>
-      <h3><a href="https://dancerfly.com/pbj/rose-city-blues/order/shop/" alt="">Register Today on Dancerfly</a></h3>
+      <h1 class="main-title">Rose City Blues 2017</h1>
+      <h3 class="tagline">November 3-5</h2>
+      <h3 class="tagline">See you among the stars!</h3>
+      <h3 class="tagline"><a href="https://dancerfly.com/pbj/rose-city-blues/order/shop/" alt="">Register Today on Dancerfly!</a></h3>
+      <ul>Coming Soon:
+        <li>Instructor Bios</li>
+        <li>Class Listings</li>
+        <li>...and More!</li>
+      </ul>
     </div>
   </body>
 </html>
