--- a/rosecityblues.com/index.html
+++ b/rosecityblues.com/index.html
@@ -5,7 +5,7 @@
     <title>RCB 2017</title>
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/styles.css">
-    <link href='https://fonts.googleapis.com/css?family=Yesteryear' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet'>
     <script type="text/javascript" href="./js/bootstrap.js"></script>
     <script type="text/javascript" href="./js/jquery-3.2.1.js"></script>
     <script type="text/javascript" href="./js/scripts.js"></script>
